WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
13106
REGRESSION: Incomplete document.all implementation breaks abtelectronics.com (Style Change Through JavaScript Blanks Content)
https://bugs.webkit.org/show_bug.cgi?id=13106
Summary
REGRESSION: Incomplete document.all implementation breaks abtelectronics.com ...
Charles Gaudette
Reported
2007-03-18 01:48:06 PDT
Tested with WebKit
r20267
. The page's content is blanked by mousing over the page's left-hand site index. In Safari 420+ the page content is not effected. However, Safari 420+ is not displaying the pop-up menu that is intended by the mouse-over event. Correct handling of the popup menu is seen in (at least) FireFox 2 and MSIE for Mac. Also note: Bug is present with WebKit-CVS-2005-12-31 08-50-50 GMT.dmg. Bug is not present with WebKit-CVS-2005-12-29 00-17-50 GMT.dmg. ("pewtermoose" says, "I'm pretty sure that corresponds to
r11795
/6/7 in svn terms".)
Attachments
Reduction
(521 bytes, text/html)
2007-03-18 01:53 PDT
,
Charles Gaudette
no flags
Details
document.all tests
(1.10 KB, text/html)
2007-03-18 05:47 PDT
,
Alexey Proskuryakov
no flags
Details
document.all tests
(1.82 KB, text/html)
2007-03-18 06:14 PDT
,
Alexey Proskuryakov
no flags
Details
patch
(7.83 KB, patch)
2007-03-18 15:06 PDT
,
Geoffrey Garen
ggaren
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Charles Gaudette
Comment 1
2007-03-18 01:53:29 PDT
Created
attachment 13688
[details]
Reduction I started the reduction and "pewtermoose" finished it up.
Alexey Proskuryakov
Comment 2
2007-03-18 05:47:02 PDT
Created
attachment 13690
[details]
document.all tests
Alexey Proskuryakov
Comment 3
2007-03-18 06:14:03 PDT
Created
attachment 13691
[details]
document.all tests Added some cases; commented out some that are irrelevant here and may even be not worth it trying to match. All the results are from WinIE 6. I'm not working on a fix now, feel free to take this bug.
Geoffrey Garen
Comment 4
2007-03-18 11:34:02 PDT
I'm working on this.
Geoffrey Garen
Comment 5
2007-03-18 15:05:20 PDT
Alexey's test uncovers a lot of interesting little differences. The key to this site seems to be how we treat the empty string, though.
Geoffrey Garen
Comment 6
2007-03-18 15:06:06 PDT
Created
attachment 13695
[details]
patch Fixes the empty string case, and the website.
Geoffrey Garen
Comment 7
2007-03-18 15:16:19 PDT
I've broken off
bug 13112
to cover cases other than the empty string. I didn't want to make those sorts of changes right now, though, because they're pretty risky -- especially when it comes to Dashboard.
Geoffrey Garen
Comment 8
2007-03-18 16:13:52 PDT
Comment on
attachment 13695
[details]
patch r=Oliver Hunt
Geoffrey Garen
Comment 9
2007-03-18 16:17:53 PDT
Committed revision 20295.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug