JavaScriptCore:

Reviewed by Oliver Hunt.

        Exposed some extra toUInt32 functionality, as part of the fix for
        REGRESSION: Incomplete document.all implementation breaks abtelectronics.com
        (Style Change Through JavaScript Blanks Content)

        * JavaScriptCore.exp:
        * kjs/identifier.h:
        (KJS::Identifier::toUInt32):

LayoutTests:

        Reviewed by Oliver Hunt.

        Layout test for http://bugs.webkit.org/show_bug.cgi?id=13106
        REGRESSION: Incomplete document.all implementation breaks abtelectronics.com
        (Style Change Through JavaScript Blanks Content)

        * fast/dom/collection-null-like-arguments-expected.txt: Added.
        * fast/dom/collection-null-like-arguments.html: Added.

WebCore:

        Reviewed by Oliver Hunt.

        Fixed http://bugs.webkit.org/show_bug.cgi?id=13106
        REGRESSION: Incomplete document.all implementation breaks abtelectronics.com
        (Style Change Through JavaScript Blanks Content)

        When indexing into collections, treat the empty string as an invalid argument,
        instead of the number 0.

        * bindings/js/kjs_html.cpp:
        (KJS::JSHTMLCollection::getOwnPropertySlot):
        (KJS::JSHTMLCollection::callAsFunction):
        (KJS::JSHTMLCollectionPrototypeFunction::callAsFunction):



Canonical link: https://commits.webkit.org/17079@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@20295 268f45cc-cd09-0410-ab3c-d52691b4dbfc