WebCore/bindings/js/kjs_html.cpp
@@ -1484,7 +1484,7 @@ bool JSHTMLCollection::getOwnPropertySlot(ExecState* exec, const Identifier& pro
 
     // name or index ?
     bool ok;
-    unsigned int u = propertyName.toUInt32(&ok);
+    unsigned int u = propertyName.toUInt32(&ok, false);
     if (ok) {
       slot.setCustomIndex(this, u, indexGetter);
       return true;
@@ -1512,7 +1512,7 @@ JSValue *JSHTMLCollection::callAsFunction(ExecState* exec, JSObject* , const Lis
     // support for document.all(<index>) etc.
     bool ok;
     UString s = args[0]->toString(exec);
-    unsigned int u = s.toUInt32(&ok);
+    unsigned int u = s.toUInt32(&ok, false);
     if (ok)
       return toJS(exec, collection.item(u));
     // support for document.images('<name>') etc.
@@ -1522,7 +1522,7 @@ JSValue *JSHTMLCollection::callAsFunction(ExecState* exec, JSObject* , const Lis
   {
     bool ok;
     UString s = args[0]->toString(exec);
-    unsigned int u = args[1]->toString(exec).toUInt32(&ok);
+    unsigned int u = args[1]->toString(exec).toUInt32(&ok, false);
     if (ok)
     {
       WebCore::String pstr = s;
@@ -1565,7 +1565,7 @@ JSValue* JSHTMLCollectionPrototypeFunction::callAsFunction(ExecState* exec, JSOb
   case JSHTMLCollection::Item:
     {
         bool ok;
-        uint32_t index = args[0]->toUInt32(exec, ok);
+        uint32_t index = args[0]->toString(exec).toUInt32(&ok, false);
         if (ok)
             return toJS(exec, coll.item(index));
     }
